Working on card grid structure using CSS, added a new section and a new set of pictures for news cards. Made minor changes on responsivness with media queries

--- a/code/index.html
+++ b/code/index.html
@@ -29,18 +29,19 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-main">
               <ul class="nav navbar-nav navbar-right">
-                <li><a class="active" href="#">About</a></li>
-                <li><a href="#">link</a></li>
-                <li><a href="#">link</a></li>
-                <li><a href="#">link</a></li>
-                <li><a href="#">link</a></li>
-                
+                <li><a class="active" href="#home">About</a></li>
+                <li><a href="#news">Catalogue</a></li>
+                <li><a href="#footer" class="fa fa-facebook" class="icon"></a></li>
+                <li><a href="#footer" class="fa fa-twitter" class="icon"></a></li>
+                <li><a href="#footer" class="fa fa-instagram" class="icon"></a></li>
               </ul>
             </div>
           </div>
       </nav>
     </header>
    
+    <!-- ABOUT PAGE/MAIN CONTAINER -->
+    <div id="home">
     <section class="main-container">
       <section class="container">
         <img class="landing-img" src="/assets/row-main.jpg" width="100%" height="80%" alt="girl on a computer">
@@ -49,6 +50,8 @@
           <h1 class="h1">Welcome to Houm Magazine</h1>
         </div>
         </section>
+
+    <!-- INTRO TO HOUM MAGAZINE SECTION -->
     </section>
     <section class="news-container">
       <div class="padding">
@@ -68,114 +71,148 @@
           </div>
         </div>
       </div>
+    </div>
     </section>
 
+    <!-- NEWS CARD SECTION -->
+    <main>
     <section>
+      <div id="news">
       <section class="card-container">
         <section class="container">
 
-
+          <div class="h1-news">
+            <h1>Houm Magazine // Online Catalogue</h1>
+          </div>
           <div class="card" style="width: 200px">
-            <img src="/assets/bathroom.jpg" width="200px" alt="bathroom">
+            <img src="/assets/bath.jpg" width="200px" alt="bathroom">
             <div class="card-body">
-              <h4 class="card-title">Cozy bathroom</h4>
+              <h4 class="card-title">A cozy bathroom</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
 
           <div class="card" style="width: 200px">
-            <img src="/assets/bathroom.jpg" width="200px" alt="bathroom">
+            <img src="/assets/flowers.jpg" width="200px" alt="bathroom">
             <div class="card-body">
-              <h4 class="card-title">Cozy bathroom</h4>
+              <h4 class="card-title">Fresh flowers</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
 
           <div class="card" style="width: 200px">
-            <img src="/assets/bathroom.jpg" width="200px" alt="bathroom">
+            <img src="/assets/sofa.jpg" width="200px" alt="bathroom">
             <div class="card-body">
-              <h4 class="card-title">Cozy bathroom</h4>
+              <h4 class="card-title">A neutrual chill zone</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
 
           <div class="card" style="width: 200px">
-            <img src="/assets/bathroom.jpg" width="200px" alt="bathroom">
+            <img src="/assets/homeoffice.jpg" width="200px" alt="bathroom">
             <div class="card-body">
-              <h4 class="card-title">Cozy bathroom</h4>
+              <h4 class="card-title">Minimalist Home Office</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
 
           <div class="card" style="width: 200px">
-            <img src="/assets/bathroom.jpg" width="200px" alt="bathroom">
+            <img src="/assets/vase.jpg" width="200px" alt="bathroom">
             <div class="card-body">
-              <h4 class="card-title">Cozy bathroom</h4>
+              <h4 class="card-title">Neutral Details</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
 
           <div class="card" style="width: 200px">
-            <img src="/assets/bathroom.jpg" width="200px" alt="bathroom">
+            <img src="/assets/coat.jpg" width="200px" alt="bathroom">
             <div class="card-body">
-              <h4 class="card-title">Cozy bathroom</h4>
+              <h4 class="card-title"><h4>Minimalist and cozy fall wardrobe</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
 
           <div class="card" style="width: 200px">
-            <img src="/assets/bathroom.jpg" width="200px" alt="bathroom">
+            <img src="/assets/bedroom.jpg" width="200px" alt="bathroom">
             <div class="card-body">
-              <h4 class="card-title">Cozy bathroom</h4>
+              <h4 class="card-title">Declutter your bedroom</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
 
           <div class="card" style="width: 200px">
-            <img src="/assets/bathroom.jpg" width="200px" alt="bathroom">
+            <img src="/assets/food.jpg" width="200px" alt="bathroom">
             <div class="card-body">
-              <h4 class="card-title">Cozy bathroom</h4>
+              <h4 class="card-title">Food that nurtures the soul</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-        <!-- <div>
-            <h2>Make your house a home</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-        </div> -->
     </section>
     </section>
     </section>
+  </div>
+</main>
 
-      <footer class="container-fluid text-left">
+<!-- OUTRO TO HOUM MAGAZINE SECTION -->
+</section>
+<section class="last-container">
+  <div class="padding">
+    <div class="container">
+      <div class="row">
+
+        <h1>Thanks for viewing our content</h1>
+        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-3">
+          <img class="last-img" src="/assets/baloon.jpg" width="100%" alt="white vase intro pic">
+        </div>
+
+       <div class="col-lg-4 col-md-4 col-sm-3 col-xs-3">
+          <img class="last-img" src="/assets/plant.jpg" width="100%" alt="white vase intro pic">
+        </div>
+
+        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-3">
+          <h3>An online magazine featuring home design inspiration</h3>
+          <p class="lead">As summer has come to an end and the cold, yet cozy fall days are approaching, it would be a good idea to create the atmosphere of ultimate coziness in the bathroom. Why not set a few scented candles on a woodden tray, a faux or even a real plant, and enjoy a warm bubble bath on a fall night. In this online catalogue, we guide you through fall with some wonderful cozy ideas to inspire your sanctuary.</p>
+    </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+    <!-- FOOTER -->
+    <div id="footer">
+    <footer class="container-fluid">
         <div class="row">
           <hr>
+          <div class="footer">
           <div class="col-sm-6">
-            <img src="/assets/logo.png" width="150px" alt="houm magazine logo image">
             <h5>Subscribe</h5>
             <h5>Log In</h5>
 
           </div>
-          <div class="col-sm-6 text-right">
-            <a href="#" class="btn btn-default btn-lg">Get our Newsletter</a>
+          <div class="col-sm-6">
+            <a href="#" class="btn btn-default btn-md">Get our Newsletter</a>
             <h5>info@hoummagazine.com</h5>
             <h5>editors@hoummagazine.com</h5>
-            <div class="icon">
-            <a href="#" class="fa fa-facebook" class="icon"></a>
-            <a href="#" class="fa fa-twitter" class="icon"></a>
-            <a href="#" class="fa fa-instagram" class="icon"></a>
           </div>
-          </div>
+        </div>
             
           </div>
         </div>
+      </div>
       </footer>
   </body>
 </html>
+
+
+
