Added articles, responsive for desktop and mobile

--- a/code/index.html
+++ b/code/index.html
@@ -4,32 +4,79 @@
     <meta charset="utf-8" />
     <title>Alright!</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <div class="hamburger">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <img src="Images/Resurs4.png" alt="Backstreet News Logo" />
+      <img src="Images/Resurs3.png" alt="Backstreet News Logo" />
       <nav>
         <a href="#">ONE</a>
         <a href="#">TWO</a>
         <a href="#">THREE</a>
       </nav>
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </header>
 
-    <section class="big-news">
       <!-- The big news content -->
-    </section>
+      <section class="big-news">
+        <section class="container">
+          <img src="Images/bsb_group.jpg" alt="Backstreet Boys Image">
+          <div>
+            <h2>Backstreet's back, alright!</h2>
+            <p>Student poll shows Brian is the most popular Backstreet Boy</p>
+          </div>  
+        </section>
+      </section>
 
-    <section class="article-news">
       <!-- The other news  -->
-    </section>
-
+      <section class="article-news-container">
+        <section class="container">
+          <h3>A blast from the past</h3>
+          <p>What is your favourite Backstreet Boys' logo?</p>
+          <section class="article-news">
+            <a href="#">
+              <article>
+                <img src="Images/bsblogo6.jpeg" alt="Backstreet Boys Logo">
+                <h4>This is one logo</h4>
+                <div></div>
+              </article>
+            </a>
+            <a href="#">
+              <article>
+                <img src="Images/bsblogo2.png" alt="Backstreet Boys Logo">
+                <h4>This is one logo</h4>
+                <div></div>
+              </article>
+            </a>
+            <a href="#">
+              <article>
+                <img src="Images/bsblogo3.png" alt="Backstreet Boys Logo">
+                <h4>This is one logo</h4>
+                <div></div>
+              </article>
+            </a>
+            <a href="#">
+              <article>
+                <img src="Images/bsblogo4.png" alt="Backstreet Boys Logo">
+                <h4>This is one logo</h4>
+                <div></div>
+              </article>
+            </a> 
+            <a href="#"> 
+              <article>
+                <img src="Images/bsblogo5.png" alt="Backstreet Boys Logo">
+                <h4>This is one logo</h4>
+                <div></div>
+              </article>
+            </a>
+          </section>
+        </section>
+      </section>
     <footer></footer>
   </body>
 </html>
