--- a/code/index.html
+++ b/code/index.html
@@ -40,7 +40,7 @@
 
     <!-- The other news  -->
     <section class="other-news">
-      <div class ="other-news1">
+      <div class ="other-news1 red">
         <img class = "image-news1" src="./images/waterfall.png" alt="iclandic waterfall">
         <p class = "image-small-text">What you need to know about the waterfalls</p>
       </div>
