--- a/code/index.html
+++ b/code/index.html
@@ -1,28 +1,138 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" sizes="16x16" href="favicon.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Espresso Crema</title>
+</head>
+<body>
+
+<section class="navbar">
+    <nav class="topnav">
+         <a href="#home"><img class="navbar-logo" src="logo.png" alt="logo" style="width:25px;"> Espresso Crema </a>
+     <div class="topnav-right"></div>
+         <a href="#news">News</a>
+         <a href="#blog">Blog</a>
+         <a href="#gallery">Gallery</a>
+         <a href="#contact">Contact</a>
+     </div>
+    </nav>
+</section>
+
     <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+        <div>
+        <a href="https://www.nbcnews.com/health/health-news/coffee-good-you-more-science-shows-n888356" target="_blank">
+            <img class="header-pic" src="girl-coffee.jpg" alt="Girl drinks coffee">
+        </div>
+        <div> 
+            <p class="main-article"> Coffee is good for you, more science shows </p>
+            <h1>People who drank coffee, no matter how much or what kind they drank, were less likely to die over a 10-year period than non-coffee drinkers, according to a new report.</h1>
+        </a> 
+        </div>  
+    </header>    
 
-    <section class="big-news">
-    <div>
-      <ul>
-        <li>
-          <a href=""></a>
-        </li>
-      </ul>
-    </div>
+    <section class="instax-container">
+        <!--Intstax 1-->
+        <div class="instax">
+            <a href="https://feketekv.hu/" target="_blank">
+            <img class="instax-pic" src="budapestcafé.jpg" alt="Fekete brew&food bar" height="170px">
+            <div class="container">
+            <p> <strong>Fekete</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </a>     
+            </div>
+        </div>
+
+        <!--Intstax 2-->
+        <div class="instax">
+            <a href="https://bonanzacoffee.de/wordpress/" target="_blank">
+            <img class="instax-pic" src="berlincafé.jpg" alt="Bonanza" height="170px">
+            <div class="container">
+            <p> <strong>Bonanza</strong> Sed sed lacus blandit, aliquam purus non, volutpat ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+            </a>    
+            </div>
+        </div>
+
+        <!--Intstax 3--> 
+        <div class="instax">
+            <a href="https://www.tripadvisor.com/Restaurant_Review-g189180-d12448069-Reviews-Mercador_Cafe-Porto_Porto_District_Northern_Portugal.html" target="_blank">
+            <img class="instax-pic" src="portocafé.png" alt="Mercador Café" height="170px">
+            <div class="container">
+            <p> <strong>Mercador</strong> Sed hendrerit tortor tristique congue vehicula. Nam sed metus placerat, fringilla lectus ac, sodales purus. </p>
+            </a>
+            </div>
+        </div>
+
+        <!--Intstax 4-->
+        <div class="instax">
+            <a href="https://www.dropcoffee.com/" target="_blank"></a>
+            <img class="instax-pic" src="stockholmcafé.jpg" alt="Fekete brew&food bar" height="170px">
+            <div class="container">
+            <p> <strong>Drop</strong> Nulla a ullamcorper erat, ut porttitor magna. Phasellus suscipit orci id ornare rutrum.</p>
+            </a>
+            </div> 
+        </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="tried-places-row">
+        <!--Intstax 5-->
+        <div class="instax">
+            <a href="https://bonanzacoffee.de/wordpress/" target="_blank">
+            <img class="instax-pic" src="berlincafé.jpg" alt="Bonanza" height="170px">
+            <div class="container">
+            <p> <strong>Bonanza</strong> Nulla a ullamcorper erat, ut porttitor magna. Phasellus suscipit orci id ornare rutrum.</p>
+            </a>    
+            </div>
+        </div>
+
+        <!--Intstax 6--> 
+        <div class="instax">
+            <a href="https://www.tripadvisor.com/Restaurant_Review-g189180-d12448069-Reviews-Mercador_Cafe-Porto_Porto_District_Northern_Portugal.html" target="_blank">
+            <img class="instax-pic" src="portocafé.png" alt="Mercador Café" height="170px">
+            <div class="container">
+            <p> <strong>Mercador</strong> Sed hendrerit tortor tristique congue vehicula. Nam sed metus placerat, fringilla lectus ac, sodales purus.</p>
+            </a>
+            </div>
+        </div>
+
+        <!--Intstax 7-->
+        <div class="instax">
+            <a href="https://www.dropcoffee.com/" target="_blank"></a>
+            <img class="instax-pic" src="stockholmcafé.jpg" alt="Fekete brew&food bar" height="170px">
+            <div class="container">
+            <p> <strong>Drop</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </a>
+            </div> 
+        </div>
+
+         <!--Intstax 8-->
+         <div class="instax">
+            <a href="https://feketekv.hu/" target="_blank">
+            <img class="instax-pic" src="budapestcafé.jpg" alt="Fekete brew&food bar" height="170px">
+            <div class="container">
+            <p> <strong>Fekete</strong> Sed sed lacus blandit, aliquam purus non, volutpat ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            </a>     
+            </div>
+        </div>
     </section>
-  </body>
+
+     <!--Social menu row with animation-->
+     <section class="icon-row">
+        <div class="social-menu">
+         <ul>
+             <li> <a href="#"><i class="fa fa-facebook"></i></a></li>
+             <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
+             <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
+             <li> <a href="#"><i class="fa fa-youtube"></i></a></li>
+         </ul>
+        </div>
+    </section>
+
+    <footer>
+            <a href="#"><img class="footer-logo" src="logo.png" alt="logo" width="25px"> © Espresso Crema 2020 </a>
+    </footer>
+
+</body>
 </html>
