--- a/code/index.html
+++ b/code/index.html
@@ -27,6 +27,9 @@
         <a href="#">Cultur</a>
         <a href="#">Politics</a>
         <a href="#">Sport</a>
+        <a href="#">Finance</a>
+        <a href="#">Health</a>
+        <a href="#">Tech</a>
         <a href="#">ABOUT</a>
       </div>
     </div>
@@ -43,9 +46,15 @@
       }
     </script>
 
-    <h1>NEWS</h1>
+
+
+      <h1>NEWS TIME</h1>
+      
+    </div>
     </div>
   </header>
+
+
 
   <nav class="menu">
     <a href="#">News</a>
@@ -60,88 +69,121 @@
   <section class="cards">
 
     <!--card 1-->
+
     <a href="#">
-      <div class="card">
+      <div class="card one">
         <h4>NEWS</h4>
         <img src="people-3111875_640.jpg" alt="Hexbot image">
-        <h5>Hex code everywhere</h5>
-        <p>A different color with every ping</p>
+        <h5>Nearly 50 dead after Afghan downpour</h5>
+        <p>At least 46 people have been killed, about 80 have been injured in the city of Charikar north of
+          Afghanistan's capital Kabul.</p>
+        <div class="fadedbox">
+          <div class="title text"><button>NEWS</button> </div>
+        </div>
       </div>
     </a>
 
     <!--card 2-->
     <a href="#">
-      <div class="card">
+      <div class="card two">
         <h4>WORLD</h4>
         <img src="veterans-day-4653833_640.jpg" alt="Hexbot image">
-        <h5>Hex code everywhere</h5>
-        <p>A different color with every ping</p>
+        <h5>With New Arrests, Hong Kong’s Police <br>Try to Change the Narrative</h5>
+        <p>The sweep, which included two lawmakers, comes as Beijing moves to clamp down on dissent in the territory and
+          local officials try to polish their tarnished image.</p>
+        <div class="fadedbox">
+          <div class="title text"><button>WORLD</button> </div>
+        </div>
       </div>
     </a>
     <!--card 3-->
     <a href="#">
-      <div class="card">
+      <div class="card three">
         <h4>LOCAL</h4>
         <img src="trains-4184537_640.jpg" alt="Hexbot image">
-        <h5>Hex code everywhere</h5>
-        <p>A different color with every ping</p>
+        <h5>Big savings await Stockholm's healthcare</h5>
+        <p>The mathematics will be tough for healthcare in the Stockholm Region in the future. The corona pandemic means
+          that large sums of money must be saved,</p>
+        <div class="fadedbox">
+          <div class="title text"><button>LOCAL</button> </div>
+        </div>
       </div>
     </a>
     <!--card 4-->
     <a href="#">
-      <div class="card">
+      <div class="card four">
         <h4>CULTUR</h4>
         <img src="ballet-1376250_640.jpg" alt="Hexbot image">
-        <h5>Hex code everywhere</h5>
-        <p>A different color with every ping</p>
+        <h5>In Lagos, a Homegrown Ballet Academy <br>Leaps Into the Spotlight</h5>
+        <p>A viral video has lifted the school’s fortunes and visibility. “It’s not only about the dance itself,” its
+          founder says, “it’s about the value of dance education.”</p>
+        <div class="fadedbox">
+          <div class="title text"><button>CULTURE</button> </div>
+        </div>
       </div>
     </a>
     <!--card 5-->
     <a href="#">
-      <div class="card">
+      <div class="card five">
         <h4>POLITICS</h4>
         <img src="port-5192159_640.jpg" alt="Hexbot image">
-        <h5>Hex code everywhere</h5>
-        <p>A different color with every ping</p>
+        <h5>‘America First’ vs. America in the world.</h5>
+        <p>On most foreign policy issues, Trump and Biden vary widely</p>
+        <div class="fadedbox">
+          <div class="title text"><button>POLITICS</button> </div>
+        </div>
       </div>
     </a>
     <!--card 6-->
     <a href="#">
-      <div class="card">
+      <div class="card six">
         <h4>SPORT</h4>
         <img src="golf-4767796_640.jpg" alt="Hexbot image">
-        <h5>Hex code everywhere</h5>
-        <p>A different color with every ping</p>
+        <h5>Women's Open</h5>
+        <p> Sophia Popov's success mirrors a great week for the tournament</p>
+        <div class="fadedbox">
+          <div class="title text"><button>SPORT</button> </div>
+        </div>
       </div>
     </a>
 
     <!--card 7-->
     <a href="#">
-      <div class="card">
+      <div class="card seven">
         <h4>FINANCE</h4>
         <img src="aktie.jpg" alt="Hexbot image">
-        <h5>Hex code everywhere</h5>
-        <p>A different color with every ping</p>
+        <h5>Chrystia Freeland named Canada's first female finance minister</h5>
+        <p>Canada's deputy prime minister Chrystia Freeland has been named finance minister following a Cabinet shuffle.
+        </p>
+        <div class="fadedbox">
+          <div class="title text"><button>FINANCE</button> </div>
+        </div>
       </div>
     </a>
 
     <!--card 8-->
     <a href="#">
-      <div class="card">
+      <div class="card eight">
         <h4>HEALTH</h4>
         <img src="mask-4934395_640.jpg" alt="Hexbot image">
-        <h5>Hex code everywhere</h5>
-        <p>A different color with every ping</p>
+        <h5>Why Does the Coronavirus Hit Men Harder? A New Clue</h5>
+        <p>Women produce a more powerful immune response than do men, a new study finds.</p>
+        <div class="fadedbox">
+          <div class="title text"><button>HEALTH</button> </div>
+        </div>
       </div>
     </a>
 
     <!--card 9-->
     <a href="#">
-      <div class="card">
+      <div class="card nine">
         <h4>TECH</h4>
         <img src="tech.jpg" alt="tech">
-        <h5>Hex code everywhere</h5>
-        <p>A different color with every ping</p>
+        <h5>Ann Syrdal, Who Helped Give <br>Computers a Female Voice, Dies at 74</h5>
+        <p>As a researcher at AT&T, she helped lay the groundwork for modern digital assistants like Siri and Alexa.</p>
+        <div class="fadedbox">
+          <div class="title text"><button>TECH</button> </div>
+        </div>
       </div>
     </a>
 
