--- a/code/index.html
+++ b/code/index.html
@@ -48,8 +48,8 @@
 
 
 
-      <h1>NEWS TIME</h1>
-      
+    <h1>NEWS TIME</h1>
+
     </div>
     </div>
   </header>
@@ -176,7 +176,7 @@
 
     <!--card 9-->
     <a href="#">
-      <div class="card nine">
+      <div class="card .nine">
         <h4>TECH</h4>
         <img src="tech.jpg" alt="tech">
         <h5>Ann Syrdal, Who Helped Give <br>Computers a Female Voice, Dies at 74</h5>
@@ -192,7 +192,8 @@
   </section>
 
   <footer>
-
+    <h2> by Nathalie Nordströn</h2>
+    <h5>at Technigo</h5>
   </footer>
 
 
