populated content, ul imgs

--- a/code/index.html
+++ b/code/index.html
@@ -14,56 +14,143 @@
       <div></div>
       <div></div>
     </div>
-    <img class="logo" src="./cc_logo.png" alt="Cloud Club logo">
+    <img class="logo-full" src="./cc_logo.png" alt="Cloud Club logo">
+    <img class="logo-ico" src="./cc_ico.png" alt="Cloud Club logo">
     <nav>
-      <a href="#">Login</a>
       <a href="#">About</a>
-      <a href="#">Join</a>
+      <a href="#">Support</a>
+      <a href="#">Submit a Cloud</a>
     </nav>
   </header>
 
   <section class="monthly-cloud">
     <section class="container">
-      <img src="cloudom.jpg" alt="Cloud of the Month image">
+      <img src="cloudom.jpeg" alt="Cloud of the Month image">
       <div>
-          <h2>Cloud of the Month</h2>
-          <p>Polar stratospheric clouds: nacreous</p>
-          <p>Polar stratospheric clouds composed primarily of ice are known as nacreous, or mother-of-pearl, clouds. After sunset they are characterized by brilliant iridescent colours, as shown in this photograph from Sweden.</p>
-          <p>Nacreous clouds only form in the stratosphere at a temperature below the ice frost point (typically near –85 °C) in the high latitudes of both hemispheres during the winter. They are often lenticular in shape.</p>
+        <h2>Cloud of the Month</h2>
+        <p>Polar stratospheric clouds: nacreous</p>
+        <p class="content">Polar stratospheric clouds composed primarily of ice are known as nacreous, or
+          mother-of-pearl, clouds. After sunset they are characterized by brilliant iridescent colours, as shown in this
+          photograph from Sweden.</p>
+        <p class="content">Nacreous clouds only form in the stratosphere at a temperature below the ice frost point
+          (typically near –85 °C) in the high latitudes of both hemispheres during the winter. They are often lenticular
+          in shape.</p>
       </div>
     </section>
   </section>
 
-
   <section class="cloud-card-container">
     <section class="container">
-      <h3>Up for a challenge?</h3>
-      <p>Pick a prompt, view the README, fork the code, and start writing!</p>
-      <p>We'd love to see what you can do. Show us in the GitHub Community Forum.</p>
-      <h3>Week 1</h3>
-      
+      <h3>Ten Main Cloud Types</h3>
+      <p>Test your knowledge by flipping the cards.</p>
+
       <section class="cloud-cards">
-          <a href="#">
-              <div>
-                  <figure class="circles">
-                      <span></span>
-                      <span></span>
-                  </figure>
-                  <p>MEET</p>
-                  <h4>CLOUD</h4>
-              </div>
-              <img src="#" alt="image">
-              <p>Hex codes everywhere</p>
-              <p>A different color with every ping</p>
-              <p>LEVEL 1</p>
-          </a>
+        <a class="high" href="#">
+          <img src="ci.jpeg" alt="image">
+          <p class="content">Detached clouds in the form of white, delicate filaments or white or mostly white patches
+            or narrow bands. These clouds have a fibrous (hair-like) appearance, or a silky sheen, or both.</p>
+          <p>HIGH LEVEL</p>
+          <!-- Cirrus, Ci -->
+        </a>
 
+        <a class="high" href="#">
+          <img src="cc.jpeg" alt="image">
+          <p class="content">Thin, white patch, sheet or layer of cloud without shading, composed of very small elements
+            in the form of grains, ripples, etc., merged or separate, and more or less regularly arranged; most of the
+            elements have an apparent width of less than 1°.</p>
+          <p>HIGH LEVEL</p>
+          <!-- Cirrocumulus, Cc -->
+        </a>
+
+        <a class="high" href="#">
+          <img src="cs.jpeg" alt="image">
+          <p class="content">Transparent, whitish cloud veil of fibrous (hair-like) or smooth appearance, totally or
+            partly covering the sky, and generally producing halo phenomena.</p>
+          <p>HIGH LEVEL</p>
+          <!-- Cirrostratus, Cs -->
+        </a>
+
+        <a class="med" href="#">
+          <img src="ac.jpeg" alt="image">
+          <p class="content">White or grey, or both white and grey, patch, sheet or layer of cloud, generally with
+            shading, composed of laminae (a layer or layers), rounded masses, rolls, etc., which are sometimes partly
+            fibrous or diffuse and which may or may not be merged; most of the regularly arranged small elements usually
+            have an apparent width of between 1° and 5°.</p>
+          <p>MEDIUM LEVEL</p>
+          <!-- Altocumulus, Ac -->
+        </a>
+
+        <a class="med" href="#">
+          <img src="as.jpeg" alt="image">
+          <p class="content">Greyish or bluish cloud sheet or layer of striated (grooves or channels in cloud
+            formations, arranged parallel to the flow of the air), fibrous or uniform appearance, totally or partly
+            covering the sky, and having parts thin enough to reveal the Sun at least vaguely, as through ground glass
+            or frosted glass. This type does not show halo phenomena.</p>
+          <p>MEDIUM LEVEL</p>
+          <!-- Altostratus, As -->
+        </a>
+
+        <a class="med" href="#">
+          <img src="ns.jpeg" alt="image">
+          <p class="content">Grey cloud layer, often dark, the appearance of which is made diffuse by more or less
+            continuously falling rain or snow, which in most cases reaches the ground. It is thick enough throughout to
+            blot out the Sun.</p>
+          <p>Low, ragged clouds frequently occur below the layer, with which they may or may not merge.</p>
+          <p>MEDIUM LEVEL</p>
+          <!-- Nimbostratus, Ns -->
+        </a>
+
+        <a class="low" href="#">
+          <img src="sc.jpeg" alt="image">
+          <p class="content">Grey or whitish, or both grey and whitish, patch, sheet or layer of cloud that almost
+            always has dark parts, composed of tessellations, rounded masses, rolls, etc., which are non-fibrous (except
+            for virga) and which may or may not be merged; most of the regularly arranged small elements have an
+            apparent width of more than 5°.</p>
+          <p>LOW LEVEL</p>
+          <!-- Stratocumulus, Sc-->
+        </a>
+
+        <a class="low" href="#">
+          <img src="st.jpeg" alt="image">
+          <p class="content">Generally grey cloud layer with a fairly uniform base, which may give drizzle, snow or snow
+            grains. When the Sun is visible through the cloud, its outline is clearly discernible. This type does not
+            produce halo phenomena except, possibly, at very low temperatures.</p>
+          <p>Sometimes this type appears in the form of ragged patches.</p>
+          <p>LOW LEVEL</p>
+          <!-- Stratus, St-->
+        </a>
+
+        <a class="low" href="#">
+          <img src="cu.jpeg" alt="image">
+          <p class="content">Detached clouds, generally dense and with sharp outlines, developing vertically in the form
+            of rising mounds, domes or towers, of which the bulging upper part often resembles a cauliflower. The sunlit
+            parts of these clouds are mostly brilliant white; their bases are relatively dark and nearly horizontal.</p>
+          >
+          <p>Sometimes this type is ragged.</p>
+          <p>LOW LEVEL</p>
+          <!-- Cumulus, Cu -->
+        </a>
+
+        <a class="low" href="#">
+          <img src="cb.jpeg" alt="image">
+          <p class="content">Heavy and dense cloud, with a considerable vertical extent, in the form of a mountain or
+            huge towers. At least part of its upper portion is usually smooth, or fibrous or striated, and nearly always
+            flattened; this part often spreads out in the shape of an anvil or vast plume.</p>
+          <p>Under the base of this cloud, which is often very dark, there are frequently low ragged clouds either
+            merged with it or not, and precipitation sometimes in the form of virga.</p>
+          <p>LOW LEVEL</p>
+          <!-- Cumulonimbus, Cb -->
+        </a>
+
+      </section>
     </section>
-  </section>
 
-  <footer>
-    <!-- source info, who build this -->
-  </footer>
-
+    <footer>
+      <p><span style='font-size:25px;'>&#129418;</span></p>
+      <p>This page was made by Peggy @<a href="https://blipsandclicks.com">blipsandclicks<a> for educational purposes.
+      </p>
+      <p>Images and content from the <a href="https://cloudatlas.wmo.int/en/home.html">International Cloud Atlas</a>.
+      </p>
+    </footer>
 </body>
 </html>
