Started adding hovering effects

--- a/code/index.html
+++ b/code/index.html
@@ -40,19 +40,26 @@
 
     <!-- The other news  -->
     <section class="other-news">
-      <div class ="other-news1 red">
-        <img class = "image-news1" src="./images/waterfall.png" alt="iclandic waterfall">
-        <p class = "image-small-text">What you need to know about the waterfalls</p>
+
+      <div class="other-news1 hoover">
+        <div class="pic-frame">
+          <img class="image-news1" src="./images/waterfall.png" alt="iclandic waterfall">
+          <div class="hoover-title">LOCATION</div>
+        </div>
+        <div class="description">What you need to know about the waterfalls</div>
       </div>
-      <div class ="other-news2">
+
+      <div class ="other-news2 hoover">
         <img class = "image-news2" src="./images/lighthouse.png" alt="iclandic lighthouse">
         <p class = "image-small-text">Solitued with a view</p>
       </div>
-      <div class ="other-news3">
+
+      <div class ="other-news3 hoover">
         <img class = "image-news3" src="./images/purple_fields.png" alt="iclandic landscape">
         <p class = "image-small-text"> Experience a purple gladiator moment</p>
       </div>
-      <div class ="other-news4">
+
+      <div class ="other-news4 hoover">
         <img class = "image-news4" src="./images/glacier.png" alt="iclandic glacier">
         <p class = "image-small-text">How to take the best pictures</p>
       </div>
